--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -250,7 +250,6 @@ html , body {
 }
 
 #container {
-  border: 1px solid green;
   background-color: white;
   height: 400px;
   width: 350px;
@@ -284,47 +283,121 @@ html , body {
   margin-bottom: 32px;
 }
 
-/*
-.topthree {
-  display: flex;
-  background-color: white;
-  flex-direction: row;
-  border: 2px solid green;
-  margin: 0 auto;
-  padding-bottom: 32px;
-  margin-bottom: 32px;
-  width: 90%;
-  justify-content: space-between;
-  height: 400px;
-}
-
-.topthree img {
-  max-width: 100%;
-  height: auto;
-}
-
-.bottomthree {
-  display: flex;
-  flex-direction: row;
-  margin: 0 auto;
-  width: 90%;
-  background-color: white;
-  padding-bottom: 32px;
-  margin-bottom: 32px;
-  height: 400px;
-}
-
-.bottomthree img {
-  max-width: 100%;
-  height: auto;
-}
-*/
 /* fourth container */
-#fourthcontainer h1 {
+.fourthcontainer {
+  font-family: 'Open Sans', sans-serif;
+}
+
+.fourthcontainer h1 {
   text-align: center;
+  display: block !important;
   font-size: 3rem;
   padding: 32px 0;
+  font-weight: bold;
 }
+
+.flex-row {
+  display: flex;
+  flex-direction: row;
+}
+
+.fourthcontainer .leftcontainer {
+  margin-left: 24px;
+  margin-right: 0;
+  padding-right: 0;
+  max-width: 60%;
+}
+
+.fourthcontainer .leftcontainer h5 {
+  margin-top: 24px;
+  margin-bottom: 12px;
+  font-size: 2rem;
+}
+
+.fourthcontainer .leftcontainer p {
+  line-height: 25px;
+  padding-bottom: 32px;
+}
+
+.fourthcontainer .leftcontainer .info {
+  width: 90%;
+}
+
+video {
+  height: auto;
+  width: 90%;
+}
+
+#rightcontainer {
+ display: flex;
+ flex-direction: column;
+ justify-content: flex-start;
+ width: 40%;
+ align-items: flex-start;
+}
+
+#rightcontainer img {
+  max-width: 70%;
+  height: auto;
+  position: relative;
+  padding: 16px 16px;
+}
+
+ #rightcontainer .information {
+  padding-top: 60px;
+  width: 65%;
+}
+
+ #rightcontainer .information h5 {
+   font-size: 1.75rem;
+   font-weight: 500;
+   padding-bottom: 10px;
+   width: 100%;
+ }
+
+ #rightcontainer .information p {
+   line-height: 20px;
+   font-size: 1.1rem;
+   width: 100%;
+   padding: 8px 0 8px 0;
+ }
+
+ #rightcontainer .top {
+   margin-top: 0 !important;
+ }
+
+.thesis-info {
+  background-color: lightgray;
+}
+
+.now-and-then {
+  background-color: white;
+}
+
+.backgroundcolorwhite {
+  background-color: white;
+}
+
+.backgroundcolorgray {
+  background-color: lightgray;
+}
+
+/*
+#secondcontainer .rightcontainer {
+ display: flex;
+ flex-direction: column;
+ margin-left: 24px;
+ justify-content: flex-start;
+
+}
+
+#secondcontainer .rightcontainer img {
+ max-width: 70%;
+ height: auto;
+ position: relative;
+ padding: 16px 16px;
+}
+*/
 
 /* footer */
 .footer {
