--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -18,13 +18,13 @@ html , body {
   display: flex;
 }
 
-#logo {
+.logo {
   margin: 0 auto;
   margin-left: 24px;
   height: 64px;
 }
 
-#title {
+.title {
   font-size: 2rem;
   color: gray;
   margin-top: 4.5%;
@@ -32,7 +32,7 @@ html , body {
   font-weight: 600;
 }
 
-#title em {
+.title em {
   color: black !important;
 }
 
@@ -105,6 +105,7 @@ html , body {
   text-align: center;
   position: relative;
   width: 50%;
+  color: white;
 }
 
 /* second container */
@@ -408,4 +409,53 @@ video {
 
 .float-right {
   float: right;
+}
+
+/* MEDIA QUERIES */
+@media screen and (min-width: 0px) and (max-width: 480px) {
+  #show-content {
+    display: block;
+  }  /* show it on small screens */
+
+  #hide-content {
+    display: none;
+  }   /* hide it elsewhere */
+
+  .querylogos {
+    display: flex;
+    margin: 0 auto;
+    margin-left: 24px;
+    height: 64px;
+  }
+
+  .header .container {
+    border: 1px solid red;
+    width: 480%;
+  }
+
+  .thirdcontainer {
+    background-color: white;
+  }
+
+  #sixmajors #container {
+    display: flex;
+    flex-direction: column;
+    background-color: lightgray;
+    width: 480px;
+    height: auto;
+    border: 1px solid green;
+  }
+
+}
+
+@media screen and (min-width: 481px) and (max-width: 1024px) {
+  #show-content {
+    display: none;
+  }
+
+
+  #hide-logos {
+    display: none;
+  }
+
 }
